--- a/rss-opml-generator/rss-opml-generator/Sensitive/Dockerfile.Web
+++ b/rss-opml-generator/rss-opml-generator/Sensitive/Dockerfile.Web
@@ -4,12 +4,12 @@ WORKDIR /app
 COPY . ./
 RUN dotnet restore
 
-RUN dotnet publish "Sc1111111111al.Web/Sc11111111111l.Web.csproj" -c Release -o out
+RUN dotnet publish "rss-opml-generator/rss-opml-generator.csproj" -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "Sc1111111111l.Web.dll"]
+ENTRYPOINT ["dotnet", "rss-opml-generator.dll"]
 
 
